# Plater

./: CMakeLists.txt  README.md  deps.json
gui/: CMakeLists.txt  gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
plater/: CMakeLists.txt  Part.cpp  Request.cpp  Request.h  log.h  main.cpp
